--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,27 @@
 language: android
-android:
+jdk: oraclejdk7
+env:
+  matrix:
+    - ANDROID_TARGET=android-19  ANDROID_ABI=armeabi-v7a
+
   components:
-    - build-tools-21.1.1
-    - tools
-    - android-15
-    - android-21
-    - sys-img-armeabi-v7a-android-19
-    - extra-android-support
+    - build-tools-19.0.3
+    - extra-google-m2repository
     - extra-android-m2repository
-  licenses:
-    - 'android-sdk-license-.+'
-before_script:
-    - echo no | android create avd --force -n test -t android-19 --abi default/armeabi-v7a
-    - emulator -avd test -no-skin -no-audio -no-window &
-    - android-wait-for-emulator
+    - android-16
+    - sysimg-16
+  licences:
+    - android-sdk-license-bcbbd656
+    - '.*intel.+'
+
+#before_script:
+  # Create and start emulator
+  #- echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  #- emulator -avd test -no-skin -no-audio -no-window &
+  #- adb wait-for-device
+  #- adb shell input keyevent 82 &
+
 script:
-    # Release build type is only for Google Play store currently,
-    # which resolve dependency from Maven Central.
-    # This causes build errors while developing a new feature, so disable release build.
-    - travis_retry ./gradlew --full-stacktrace assembleDevDebug connectedCheck
-after_success:
-    - ./gradlew :library:coveralls
+    - ./gradlew :londonWeather:clean :londonWeather:build
+    #- ls /home/travis/build/kul3r4/droidConf/londonWeather/build/outputs/apk/londonWeather-debug.apk
+    #- ./gradlew :londonWeatherAcceptance:test --stacktrace --debug -DANDROID_HOME=/usr/local/android-sdk/
