--- a/GiglioOnlusAcceptance/build.gradle
+++ b/GiglioOnlusAcceptance/build.gradle
@@ -1,5 +1,13 @@
 apply plugin: 'java'
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    testCompile project(':GiglioOnlusLib')
+    testCompile 'junit:junit:4.12'
+    testCompile 'io.selendroid:selendroid-standalone:0.15.0'
+    testCompile 'io.selendroid:selendroid-client:0.15.0'
 }
