--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ env:
   #- adb shell input keyevent 82 &
 
 script:
-    - ./gradlew :app:clean :app:build
+    - ./gradlew :GiglioOnlus:clean :GiglioOnlus:build
     #- ls /home/travis/build/kul3r4/droidConf/londonWeather/build/outputs/apk/londonWeather-debug.apk
     #- ./gradlew :londonWeatherAcceptance:test --stacktrace --debug -DANDROID_HOME=/usr/local/android-sdk/
