--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,22 @@
-language: android
-
-jdk:
-  - oraclejdk7
-  - openjdk7
-
-before_install:
- - chmod +x gradlew
-env:
-  matrix:
-    - ANDROID_TARGET=android-22  ANDROID_ABI=armeabi-v7a
-
+android:
   components:
+    # Uncomment the lines below if you want to
+    # use the latest revision of Android SDK Tools
+    # - platform-tools
+    # - tools
+
+    # The BuildTools version used by your project
     - build-tools-22.0.1
+
+    # The SDK version used to compile your project
+    - android-22
+
+    # Additional components
+    - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
-    - android-16
-    - sysimg-16
-  licences:
-    - android-sdk-license-bcbbd656
-    - '.*intel.+'
+    - addon-google_apis-google-22
 
-#before_script:
-  # Create and start emulator
-  #- echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-  #- emulator -avd test -no-skin -no-audio -no-window &
-  #- adb wait-for-device
-  #- adb shell input keyevent 82 &
-
-script:
-    - ./gradlew clean build
-    #- ls /home/travis/build/kul3r4/droidConf/londonWeather/build/outputs/apk/londonWeather-debug.apk
-    #- ./gradlew :londonWeatherAcceptance:test --stacktrace --debug -DANDROID_HOME=/usr/local/android-sdk/
+    # Specify at least one system image,
+    # if you need to run emulator(s) during your tests
+    - sys-img-armeabi-v7a-android-22
