--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,25 @@
-android:
-  components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    # - platform-tools
-    # - tools
+language: android
+jdk : openjdk7
 
-    # The BuildTools version used by your project
+before_install:
+ - chmod +x gradlew
+env:
+  matrix:
+    - ANDROID_TARGET=android-22  ANDROID_ABI=armeabi-v7a
+
+  components:
     - build-tools-22.0.1
 
-    # The SDK version used to compile your project
-    - android-22
+  licences:
+    - android-sdk-license-bcbbd656
+    - '.*intel.+'
 
-    # Additional components
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-    - addon-google_apis-google-22
+#before_script:
+  # Create and start emulator
+  #- echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  #- emulator -avd test -no-skin -no-audio -no-window &
+  #- adb wait-for-device
+  #- adb shell input keyevent 82 &
 
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-22
+script:
+    - ./gradlew clean build
