--- a/.travis.yml
+++ b/.travis.yml
@@ -9,17 +9,17 @@ env:
 
   components:
     - build-tools-22.0.1
+    -sys-img-armeabi-v7a-android-22
 
   licences:
     - android-sdk-license-bcbbd656
     - '.*intel.+'
 
-#before_script:
-  # Create and start emulator
-  #- echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-  #- emulator -avd test -no-skin -no-audio -no-window &
-  #- adb wait-for-device
-  #- adb shell input keyevent 82 &
+before_script:
+  - echo no | android create avd --force -n test -t android-19 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
 script:
     - ./gradlew :GiglioOnlus:clean :GiglioOnlus:build
